# smc_verifiable_plugins

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  NOTICE  README.md
.github/workflows/: build_executable.yml  deploy_pages.yml
cmake/: Config.cmake.in
docs/: Makefile  requirements.txt
docs/source/: Doxyfile.in  conf.py  development.rst  get_started.rst  index.rst  installation.rst  reference.rst
docs/source/_static/css/: custom.css
include/smc_verifiable_plugins/: smc_plugin_base.hpp  utils.hpp
plugins/include/: int_accumulation_smc_plugin.hpp
plugins/src/: int_accumulation_smc_plugin.cpp
test/: test_plugin_loading.cpp
